--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
-    "deploy": "powershell ./deploy.ps1"
+    "deploy": "sh ./deploy.sh"
   },
   "keywords": [],
   "author": "niuai",
