--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,6 +17,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+        github_token: '${{ secrets.github_actions }}'
     - name: npm install, build, and test
       run: |
         npm ci
