--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -13,11 +13,16 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: '${{ secrets.github_actions }}'
+      run: |
+        git --version
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-        github_token: '${{ secrets.github_actions }}'
     - name: npm install, build, and test
       run: |
         npm ci
