--- a/package.json
+++ b/package.json
@@ -5,19 +5,12 @@
   "main": "index.js",
   "scripts": {
     "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs",
-    "deploy": "sh ./deploy.sh"
+    "docs:build": "vuepress build docs"
   },
   "keywords": [],
   "author": "niuai",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
-    "@vuepress/plugin-active-header-links": "^1.2.0",
-    "@vuepress/plugin-back-to-top": "^1.2.0",
-    "@vuepress/plugin-google-analytics": "^1.2.0",
-    "@vuepress/plugin-medium-zoom": "^1.2.0",
-    "@vuepress/plugin-nprogress": "^1.2.0",
-    "@vuepress/plugin-pwa": "^1.2.0",
-    "vuepress": "^1.2.0"
+    "vuepress": "^1.8.2"
   }
 }
