--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -1,37 +1,53 @@
 name: Push to gh-pages(Node CI)
 
-on: [push]
+on:
+  push:
+    branches: [master]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [10.x]
-
     steps:
-    - uses: actions/checkout@v1
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
-      with:
-        node-version: ${{ matrix.node-version }}
-    - name: update markdown current date
-      run: |
-        sed -i "s/{Current_Date}/$(date '+%Y')/g" docs/README.md
-    - name: npm install, build, and test
-      run: |
-        npm ci
-        npm run docs:build
-        npm test
-    - name: Commit to repository
-      run: |
-        cd docs/.vuepress/dist
-        git config --global user.email "niuai@niuai.com"
-        git config --global user.name "niuai"
-        git init
-        git add -A
-        git commit -m 'deploy niuai-docs'
-        git push -f https://x-access-token:${{ secrets.github_actions }}@github.com/niuai/blog.git master:gh-pages
-      env:
-        CI: true
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: '14'
+
+      # 缓存 node_modules
+      - name: Cache dependencies
+        uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: |
+            **/node_modules
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      # 如果缓存没有命中，安装依赖
+      - name: Install dependencies
+        if: steps.yarn-cache.outputs.cache-hit != 'true'
+        run: yarn --frozen-lockfile
+
+      - name: update markdown current date
+        run: |
+          sed -i "s/{Current_Date}/$(date '+%Y')/g" docs/README.md
+
+      # 运行构建脚本
+      - name: Build VuePress site
+        run: yarn docs:build
+
+      # 查看 workflow 的文档来获取更多信息
+      # @see https://github.com/crazy-max/ghaction-github-pages
+      - name: Deploy to GitHub Pages
+        uses: crazy-max/ghaction-github-pages@v2
+        with:
+          # 部署到 gh-pages 分支
+          target_branch: gh-pages
+          # 部署目录为 VuePress 的默认输出目录
+          build_dir: docs/.vuepress/dist
